# plagiarism-basic

./: .gitignore  Cargo.toml  LICENSE.md  README.md  publish_all.sh  run-cs.sh  run.sh  run_lev.sh  run_perf.sh
plagiarism-basic/: Cargo.toml  README.md
plagiarism-basic/src/: cli_input.rs  main.rs
plagiarismbasic_lib/: Cargo.toml  README.md
plagiarismbasic_lib/benches/: benchmark.rs
plagiarismbasic_lib/src/: file_utils.rs  lib.rs  plagiarism_database.rs  result_output_html.rs  result_printer.rs  string_compare.rs  text_utils.rs
plagiarismbasic_lib/templates/: report.hbs
plagiarismbasic_lib/testfiles/cs-corpus/ut/: g1pB_taska.txt  g1pB_taskb.txt  g2pA_taska.txt  g2pB_taskc.txt  g4pB_taske.txt  g4pD_taskd.txt  g4pD_taske.txt
plagiarismbasic_lib/testfiles/ut/: sam.txt
plagiarismbasic_lib/www/: report.html
src/: cli_input.rs  file_utils.rs  main.rs  plagiarism_database.rs  result_output_html.rs  result_printer.rs  string_compare.rs  text_database.rs  text_utils.rs
templates/: report.hbs
testfiles/cs-corpus/ut/: g1pB_taskd.txt  g2pA_taskb.txt  g2pB_taska.txt  g2pB_taskb.txt  g3pA_taska.txt  g4pB_taskb.txt  g4pB_taskd.txt  g4pE_taskb.txt  g4pE_taskc.txt  g4pE_taskd.txt
testfiles/ut/: bob.txt
