[package]
name = "plagiarism-basic"
version = "0.4.0"
description = "Basic plagiarism checker written in Rust"
authors = ["Sriram Sami <frizensami@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/frizensami/plagiarism-basic"
keywords = ["cli", "plagiarism", "wip"]
categories = ["command-line-utilities"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# String similarity metrics (using Levenshtein)
strsim = "0.9.3"
# Regex matching for string cleaning
regex = "1"
# Argument parsing
clap = "2.33"
# HTML templating
handlebars = "2.0.2"
# For handlebars 
serde = { version = "1.0", features = ["derive"] }
# For handlebars
serde_json = "1.0"
# Interval set to figure out what to bold
intervallum = "1.3.0"
# Interval set operations (e.g. bound-finding, cardinality, etc)
gcollections = "1.4.0"
