[package]
name = "plagiarism-basic"
version = "1.0.0"
description = "Basic plagiarism checker written in Rust"
authors = ["Sriram Sami <frizensami@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/frizensami/plagiarism-basic"
keywords = ["cli", "plagiarism", "wip"]
categories = ["command-line-utilities"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Argument parsing
clap = "2.33"
# Our own lib
plagiarismbasic_lib = { version = "1.0.0", path = "../plagiarismbasic_lib"}
